--- a/app/package.json
+++ b/app/package.json
@@ -4,12 +4,6 @@
   "main": "main.js",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/anchor-js": "^4.1.0",
-    "@types/highlight.js": "9.1.9",
-    "@types/jquery": "2.0.48",
-    "@types/modernizr": "3.5.0",
-    "@types/slick-carousel": "1.6.32",
-    "@types/youtube": "0.0.32",
     "autoprefixer": "7.1.2",
     "css-loader": "0.28.4",
     "exports-loader": "^0.7.0",
@@ -26,19 +20,14 @@
     "webpack": "3.11.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free-webfonts": "1.0.8",
     "add": "^2.0.6",
-    "anchor-js": "^4.2.0",
     "bootstrap": "4.1.3",
     "highlight.js": "9.16.2",
     "jquery": "3.4.1",
-    "popper.js": "^1.16.0",
-    "roboto-fontface": "0.10.0",
-    "slick-carousel": "kenwheeler/slick#refs/pull/3307/head",
-    "yarn": "^1.22.0"
+    "popper.js": "^1.16.0"
   },
   "scripts": {
-    "prebuild": "yarn install && rimraf ../static/assets/",
+    "prebuild": "npm install && rimraf ../static/assets/",
     "build": "webpack -p --env.NODE_ENV production --env.SOURCE_MAP source-map",
     "build:watch": "webpack --watch --env.NODE_ENV development --env.SOURCE_MAP eval-source-map"
   }
