--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - openjdk11
 env:
   global:
-    - HUGO_VERSION=0.64.1
+    - HUGO_VERSION=0.67.1
 install:
   - wget "https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb"
   - sudo dpkg -i "hugo_${HUGO_VERSION}_Linux-64bit.deb"
@@ -27,6 +27,6 @@ branches:
 #  local_dir: public
 #  target_branch: gh-pages
 cache:
-  - npm
+  npm: true
   directories:
     - $HOME/.m2
