The docs project has moved to a standalone repo

--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -43,7 +43,7 @@ jobs:
         shell: bash
 
       - name: Build docs...
-        run: ./build-asciidocs.sh master
+        run: ./build-asciidocs.sh main
         shell: bash
 
       - name: Run Hugo...
