--- a/app/package.json
+++ b/app/package.json
@@ -6,31 +6,31 @@
   "main": "main.js",
   "license": "Apache-2.0",
   "devDependencies": {
-    "autoprefixer": "9.7.4",
-    "css-loader": "3.4.2",
+    "autoprefixer": "10.4.4",
+    "css-loader": "6.7.1",
     "exports-loader": "^0.7.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "5.1.0",
-    "html-webpack-plugin": "3.2.0",
-    "node-sass": "^4.13.1",
-    "postcss-loader": "3.0.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "node-sass": "^7.0.1",
+    "postcss-loader": "6.2.1",
     "rimraf": "3.0.2",
-    "sass": "1.26.2",
-    "sass-loader": "^8.0.2",
-    "style-loader": "1.1.3",
-    "url-loader": "3.0.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "sass": "1.49.9",
+    "sass-loader": "^12.6.0",
+    "style-loader": "3.3.1",
+    "url-loader": "4.1.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "bootstrap": "4.4.1",
-    "highlight.js": "9.18.1",
-    "jquery": "3.4.1",
-    "popper.js": "^1.16.0"
+    "bootstrap": "4.6.1",
+    "highlight.js": "11.5.0",
+    "jquery": "3.6.0",
+    "popper.js": "^1.16.1"
   },
   "scripts": {
     "prebuild": "npm install && rimraf ../static/assets/",
-    "build": "webpack -p --env.NODE_ENV production --env.SOURCE_MAP source-map",
-    "build:watch": "webpack --watch --env.NODE_ENV development --env.SOURCE_MAP eval-source-map"
+    "build": "webpack --mode=production --devtool=source-map",
+    "build:watch": "webpack --watch --mode=development --devtool=eval-source-map"
   }
 }
