--- a/data/versions.yaml
+++ b/data/versions.yaml
@@ -7,8 +7,4 @@ ByUrl:
 
   "5.x":
     URL: "5.x"
-    Name: "5.x (release candidate)"
-
-  "main":
-    URL: "main"
-    Name: "main (release candidate)"
+    Name: "5.x (development)"
