--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,8 @@
     "bootstrap": "4.6.1",
     "highlight.js": "11.5.0",
     "jquery": "3.6.0",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "@fortawesome/fontawesome-free": "^6.1.1"
   },
   "scripts": {
     "prebuild": "npm install && rimraf ../static/assets/",
