Fix SEO-related issues:  - add `robots.txt`  - remove double `<title>` tag

--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,15 @@ baseURL: "https://agrest.io/"
 languageCode: "en-us"
 title: "Agrest - Model-Driven REST Data Services"
 
-disableKinds: ['RSS', 'taxonomy', 'term']
+disableKinds:
+  - RSS
+  - taxonomy
+  - term
+
+enableRobotsTXT: true
+
+outputs:
+  - html
 
 permalinks:
   page: ":filename/"
